--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </div>
         </div>
     <div class="start dis-flex">
-      <a class="btn" href="get-start.html">Get Started</a>
+      <a class="btn" href="/get-start.html">Get Started</a>
     </div>
     <div class="intro">
       <h2>What is Remit</h2>
