--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
     </header>
     <div class="hero dis-flex">
         <div class="latest dis-flex">
-                  <a href="#"><p class="btn">Remit v1.0 Beta</p></a>
+                  <a href="get-start.html"><p class="btn">Remit v1.0 Beta</p></a>
                   <p class="title">Develop Responsive and Stylish <br/> Static or Blogspot Template With <b>Remit</b> CSS tool</p>
                 </div>
         </div>
     <div class="start dis-flex">
-      <a class="btn" href="https://remit-dev.github.io/framework/get-start.html">Get Started</a>
+      <a class="btn" href="get-start.html">Get Started</a>
     </div>
     <div class="intro">
       <h2>What is Remit</h2>
